<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/icLogo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo" />
    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icLogo"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"
        android:hint="@string/hintLogin"
        android:textColorHint="@color/black"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:layout_below="@+id/etLogin"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:textColorHint="@color/black"/>
    <CheckBox
        android:id="@+id/cbSaveAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:textColor="@color/black"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:buttonTint="@color/black"
        android:text="@string/cbSaveAuth" />
    <Button
        android:textSize="16sp"
        android:id="@+id/btnAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbSaveAuth"
        android:layout_centerInParent="true"
        android:text="@string/Auth"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/Creator"/>

</RelativeLayout>
